--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>webmagic-core</artifactId>
             <version>0.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.40</version>
+        </dependency>
     </dependencies>
 
 </project>
