added rescheduling when status code != 200

--- a/crawler/src/main/resources/log4j.properties
+++ b/crawler/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
 log4j.logger.sg.edu.smu.webmining = DEBUG, STDOUT
+log4j.logger.us.codecraft.webmagic.Spider = DEBUG, STDOUT
 
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.Target=System.out
