--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.40</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
