--- a/crawler/src/main/resources/log4j.properties
+++ b/crawler/src/main/resources/log4j.properties
@@ -3,5 +3,5 @@ log4j.logger.us.codecraft.webmagic.Spider = DEBUG, STDOUT
 
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.Target=System.out
-log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.STDOUT.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n%throwable{short}
