review processor updated, the review parsers are encapsulated

--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.crawler-commons</groupId>
+            <artifactId>crawler-commons</artifactId>
+            <version>0.7</version>
+        </dependency>
     </dependencies>
 
 </project>
