--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>crawler-commons</artifactId>
             <version>0.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
     </dependencies>
+
 
 </project>
