logging for parsing added, updated log4j properties

--- a/crawler/src/main/resources/log4j.properties
+++ b/crawler/src/main/resources/log4j.properties
@@ -1,7 +1,14 @@
 log4j.logger.sg.edu.smu.webmining = DEBUG, STDOUT
+log4j.logger.sg.edu.smu.webmining.crawler.parse = DEBUG, STDOUT
 log4j.logger.us.codecraft.webmagic.Spider = DEBUG, STDOUT
 
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.Target=System.out
 log4j.appender.STDOUT.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n%throwable{short}
+
+log4j.appender.FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.FILE.File=log.txt
+log4j.appender.FILE.Append=true
+log4j.appender.FILE.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n%throwable
