--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -44,12 +44,18 @@
 
         <resources>
             <resource>
-                <directory>scr/main/resources</directory>
+                <directory>src/main/resources</directory>
                 <excludes>
                     <exclude>log4j.properties</exclude>
                 </excludes>
             </resource>
         </resources>
+
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
     </build>
 
     <dependencies>
@@ -89,7 +95,12 @@
             <artifactId>json</artifactId>
             <version>20160810</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
 
 </project>
